<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    >
    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/there_is_no_data_in_favorite_add_some_news_as_favorite"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:gravity="center"
        android:visibility="gone"
        />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_bar_background"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:fontFamily="@font/title"
                    android:text="@string/news_app"
                    android:textAlignment="gravity"
                    android:textColor="@color/button_text"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    android:gravity="center"
                    />

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/round_white"
                    android:iconifiedByDefault="false"
                    android:outlineProvider="none"
                    android:queryHint="Search Here"
                    android:visibility="gone"
                    android:layout_marginEnd="15dp"
                    app:closeIcon="@drawable/icon_close"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    />
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layout_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/searchView"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:visibility="gone"
                    >
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tag_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/searchView"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/round_white"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/all"
                        android:textSize="16sp"
                        android:visibility="visible" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tag_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/searchView"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toRightOf="@+id/tag_all"
                        android:background="@drawable/round_white"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/title"
                        android:textSize="16sp"
                        android:visibility="visible" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tag_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/searchView"
                        android:layout_margin="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@+id/tag_title"
                        android:background="@drawable/round_white"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/description"
                        android:visibility="visible" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tag_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/searchView"
                        android:layout_margin="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_toEndOf="@+id/tag_description"
                        android:background="@drawable/round_white"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/content"
                        android:visibility="visible" />
                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_news"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_anchor="@id/appbar_categories"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <ProgressBar
        android:id="@+id/loading"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/search"
        android:src="@drawable/ic_baseline_search_24"
        app:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginBottom="100dp"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
