<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.fragment.SettingsFragment">

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/title_text"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/night_mode"
        android:textColor="@color/title_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_settings"/>

    <RelativeLayout
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/switch_theme">

        <TextView
            android:id="@+id/txt_spinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="start|center_vertical"
            android:text="@string/top_news_country"
            android:textColor="@color/title_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_select_country"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/txt_spinner"
            android:layout_alignParentEnd="true"
            android:dropDownSelector="@drawable/round_white"
            android:gravity="end"
            android:popupBackground="@color/tab_background"
            android:background="@drawable/round_white"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_select_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_layout"
        android:textColor="@color/title_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_layout">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/layout_image1"
                android:layout_width="80dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/compact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/layout_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Compact" />

            <RadioButton
                android:id="@+id/layout_radio_button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/layout_image2"
                android:layout_width="80dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/full"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/layout_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="General" />

            <RadioButton
                android:id="@+id/layout_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>